etc/kubernetes/manifests/phpinfo-2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpinfo-2
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: phpinfo-2
  template: 
    metadata: 
      labels: 
        app: phpinfo-2
    spec:
      containers: 
      - name: phpinfo-2
        image: terferre/phpinfo-2:latest
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket: 
            port: 8080
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports: 
        - containerPort: 8080
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 8080
        #  failureThreshold: 3
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 100m
          requests:
            cpu: 100m
            memory: 100m
---
#politica red Cortafuegos
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec: 
  podSelector: {}
  policyTypes: 
  - Ingress
---
#Regla aperturista
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: phpinfo-2
spec: 
  ingress:
  - ports:
    - port: 8080    
  podSelector: 
    matchLabels: 
      app: phpinfo-2
  policyTypes: 
  - Ingress
---
# Servicio para balanceador de carga hacia los Pods
apiVersion: v1
kind: Service
metadata:
  name: phpinfo-2
spec: 
  ports: 
  - port: 8080
    targetPort: 8080
  selector:
    app: phpinfo-2
  # IP interna al cluster
  type: ClusterIP
---
