etc/kubernetes/manifests/phpinfo-3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpinfo-3
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: phpinfo-3
  template: 
    metadata: 
      labels: 
        app: phpinfo-3
    spec:
      containers: 
      - name: phpinfo-3
        image: lherrerom/phpinfo-3:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 8080
---
#politica red Cortafuegos
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec: 
  podSelector: {}
  policyTypes: 
  - Ingress
---
#Regla aperturista
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: phpinfo-3
spec: 
  ingress:
  - ports:
    - port: 8080    
  podSelector: 
    matchLabels: 
      app: phpinfo-3
  policyTypes: 
  - Ingress
---
# Servicio para balanceador de carga hacia los Pods
apiVersion: v1
kind: Service
metadata:
  name: phpinfo-3
spec: 
  ports: 
  - port: 8080
    targetPort: 8080
  selector:
    app: phpinfo-3
  # IP interna al cluster
  type: ClusterIP
---
